🔨 update example notebooks

--- a/examples/01_quickstart.ipynb
+++ b/examples/01_quickstart.ipynb
@@ -14,39 +14,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from strpy import generate_synthetic_data, STR_decompose, AutoSTR_simple\n",
-    "\n",
-    "np.random.seed(42)"
-   ]
+   "source": "import numpy as np\nimport matplotlib.pyplot as plt\nfrom strpy import AutoSTR_simple\n\nnp.random.seed(42)"
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## 1. Generate Data"
-   ]
+   "source": "## 1. Generate Simple Wave Data\n\nCreate a simple time series with:\n- Linear trend\n- Sine wave seasonality (weekly pattern)\n- Random noise"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Generate 1 year of daily data with weekly pattern\n",
-    "df = generate_synthetic_data(n=365, periods=(7,), gamma=0.3, random_seed=42)\n",
-    "\n",
-    "plt.figure(figsize=(12, 3))\n",
-    "plt.plot(df['data'])\n",
-    "plt.title('Synthetic Time Series')\n",
-    "plt.grid(True, alpha=0.3)\n",
-    "plt.show()\n",
-    "\n",
-    "print(f\"Data shape: {df.shape}\")\n",
-    "print(f\"Columns: {list(df.columns)}\")"
-   ]
+   "source": "# Create simple synthetic data\nn = 365  # One year of daily data\nt = np.arange(n)\n\n# Components\ntrend = 0.02 * t                          # Linear trend\nseasonal = 2 * np.sin(2*np.pi*t/7)       # Weekly pattern (period=7)\nnoise = 0.5 * np.random.randn(n)         # Random noise\ndata = trend + seasonal + noise\n\n# Visualize\nfig, axes = plt.subplots(4, 1, figsize=(12, 8))\n\naxes[0].plot(data, 'k-', alpha=0.7)\naxes[0].set_title('Data (Trend + Seasonal + Noise)')\naxes[0].grid(True, alpha=0.3)\n\naxes[1].plot(trend, 'b-')\naxes[1].set_title('True Trend (0.02 × t)')\naxes[1].grid(True, alpha=0.3)\n\naxes[2].plot(seasonal, 'g-')\naxes[2].set_title('True Seasonal (2 × sin(2πt/7))')\naxes[2].grid(True, alpha=0.3)\n\naxes[3].plot(noise, 'r-', alpha=0.5)\naxes[3].set_title('True Noise')\naxes[3].grid(True, alpha=0.3)\n\nplt.tight_layout()\nplt.show()\n\nprint(f\"Data points: {n}\")\nprint(f\"Seasonal period: 7 days (weekly)\")\nprint(f\"Noise std: {noise.std():.2f}\")"
   },
   {
    "cell_type": "markdown",
@@ -60,73 +40,54 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Automatic decomposition\n",
-    "result = AutoSTR_simple(df['data'].values, seasonal_periods=[7], n_trials=10)\n",
-    "\n",
-    "print(f\"Optimal trend_λ: {result.params['trend_lambda']:.1f}\")\n",
-    "print(f\"Optimal seasonal_λ: {result.params['seasonal_lambda']:.1f}\")\n",
-    "print(f\"R²: {1 - result.remainder.var()/df['data'].var():.3f}\")"
-   ]
+   "source": "# Automatic decomposition with STR\nresult = AutoSTR_simple(data, seasonal_periods=[7], n_trials=15)\n\nprint(f\"Optimal trend_λ: {result.params['trend_lambda']:.1f}\")\nprint(f\"Optimal seasonal_λ: {result.params['seasonal_lambda']:.1f}\")"
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## 3. Visualize Components"
-   ]
+   "source": "## 3. Visualize Results"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "result.plot()\n",
-    "plt.show()"
-   ]
+   "source": "# Plot decomposed components\nresult.plot()\nplt.tight_layout()\nplt.show()"
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## 4. Accuracy"
-   ]
+   "source": "## 4. Compare with True Components"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from strpy.simulations import rmse\n",
-    "\n",
-    "print(\"Component RMSE:\")\n",
-    "print(f\"  Trend:    {rmse(df['trend'].values - result.trend):.3f}\")\n",
-    "print(f\"  Seasonal: {rmse(df['seasonal_1'].values - result.seasonal[0]):.3f}\")\n",
-    "print(f\"\\nVariance Explained: {100*(1-result.remainder.var()/df['data'].var()):.1f}%\")"
-   ]
+   "source": "# Compare estimated vs true components\nfig, axes = plt.subplots(2, 1, figsize=(12, 6))\n\n# Trend comparison\naxes[0].plot(trend, 'b-', label='True Trend', linewidth=2)\naxes[0].plot(result.trend, 'r--', label='Estimated Trend', linewidth=2)\naxes[0].set_title('Trend Comparison')\naxes[0].legend()\naxes[0].grid(True, alpha=0.3)\n\n# Seasonal comparison\naxes[1].plot(seasonal[:28], 'g-', label='True Seasonal', linewidth=2)\naxes[1].plot(result.seasonal[0][:28], 'orange', linestyle='--', label='Estimated Seasonal', linewidth=2)\naxes[1].set_title('Seasonal Comparison (First 4 Weeks)')\naxes[1].legend()\naxes[1].grid(True, alpha=0.3)\n\nplt.tight_layout()\nplt.show()\n\n# Calculate accuracy\nfrom strpy.simulations import rmse\ntrend_rmse = rmse(trend - result.trend)\nseasonal_rmse = rmse(seasonal - result.seasonal[0])\nr_squared = 1 - result.remainder.var() / data.var()\n\nprint(f\"\\nAccuracy Metrics:\")\nprint(f\"  Trend RMSE:    {trend_rmse:.3f}\")\nprint(f\"  Seasonal RMSE: {seasonal_rmse:.3f}\")\nprint(f\"  R²:            {r_squared:.3f}\")\nprint(f\"  Variance explained: {100*r_squared:.1f}%\")"
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## Next Steps\n",
-    "\n",
-    "- Try `02_advanced.ipynb` for multiple seasonalities\n",
-    "- See [ALGORITHM_STATUS.md](../ALGORITHM_STATUS.md) for details\n",
-    "- Run `python examples/03_working_str_example.py` for full demo"
-   ]
+   "source": "## Summary\n\nThis example showed:\n1. Creating simple wave data: **linear trend** + **sine seasonal** + **noise**\n2. Automatic STR decomposition with `AutoSTR_simple()`\n3. Recovering the true components with high accuracy (>95% R²)\n\n**Next:**\n- [02_advanced.ipynb](02_advanced.ipynb) - Multiple seasonalities\n- [03_simulation_study.ipynb](03_simulation_study.ipynb) - Statistical validation"
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.12"
   }
  },
